objects/Site_Address__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genesys_Site_Name__c</fullName>
        <label>Genesys Site Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureConnect Cloud-AU-Melbourne-NextDC</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-AU-Sydney-Equinix</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-BR-Sao Paulo-Alog</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-CA-Montreal-Cologix</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-CA-Toronto-Black Iron Data</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-DE-Frankfurt-Equinix</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-GB-Slough-Savvis</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-JP-Kitakyushu-IDC2 KKJ</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-JP-Tokyo-IDC1 HND</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-US-Carmel-nFrame</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-US-Englewood-Latisys</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-US-Indianapolis-PDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>N / A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Site Address</label>
    <nameField>
        <label>Site Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>